Lab2-AppMesh-with-ColorTeller/colorapp.yml
apiVersion: v1
kind: Service
metadata:
  name: colorgateway
  labels:
    app: colorgateway
  annotations:
   alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9080
  selector:
    app: colorgateway
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorgateway
#  annotations:
#    appmesh.k8s.aws/ports: 80
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorgateway
      version: v1
  template:
    metadata:
      labels:
        app: colorgateway
        version: v1
    spec:
      containers:
        - name: colorgateway
          image: "571708975227.dkr.ecr.ap-southeast-1.amazonaws.com/colorgateway:latest"
          ports:
            - containerPort: 9080
---

apiVersion: v1
kind: Service
metadata:
  name: colorteller
  labels:
    app: colorteller
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: colorteller
    version: white
---

# white
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorteller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorteller
      version: white
  template:
    metadata:
      labels:
        app: colorteller
        version: white
    spec:
      containers:
        - name: colorteller
          image: 571708975227.dkr.ecr.ap-southeast-1.amazonaws.com/colorteller:latest
          ports:
            - containerPort: 9080
