Lab2-AppMesh-with-ColorTeller/colorapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "colorgateway-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /color
  labels:
    app: colorgateway
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "colorgateway"
          servicePort: 80
